<resources>
    <string name="app_name">endTB</string>
    <string name="app_name_full">endTB Mobile Application</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="name_of_facility">Name of referring facility</string>
    <string name="other_name">Other facility name</string>
    <string name="address_of_facility">Address of referring facility</string>
    <string name="referring_facility_information">Referring Facility Information</string>
    <string name="patient_information">Patient Information</string>
    <string name="address_information">Address Information</string>
    <string name="referrer_information">Referrer Information</string>
    <string name="test_result_information">Test Result Information</string>
    <string name="location_information">Location Information</string>
    <string name="examiner_information">Examiner Information</string>
    <string name="medical_information">Medical Information</string>
    <string name="registration_number">Registration Number</string>
    <string name="other_details">Other details</string>
    <string name="patient_name">Name of patient</string>
    <string name="occupation">Occupation</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="father_name">Father/ Husband\'s name</string>
    <string name="upazila">Upazila</string>
    <string name="landMark">Union</string>
    <string name="address">Address</string>
    <string name="landmark">Landmark</string>
    <string name="between_1_to_9">Scanty number should be between 1 to 9</string>
    <string name="between_5_to_49">Scanty number should be between 5 to 49</string>
    <string name="insufficient_privileges">Insufficient privileges</string>
    <string name="fill_required">Please enter required field</string>
    <string name="between_0_to_24">Please enter value between 0 to 24</string>
    <string name="incomplete_metadata">In complete metadata, please check server database and re-install app</string>
    <string name="max_age_error">Age can not be above 110</string>
    <string name="patient_history">Patient History</string>
    <string name="other_specify">Specify other</string>
    <string name="test_results">Test Results (click to edit)</string>
    <string name="hiv_status">HIV-status</string>
    <string name="patient_status">Patient Status</string>
    <string name="status_date">Status date</string>
    <string name="patient_id">Patient Registration ID</string>
    <string name="encounter_date">Encounter Date</string>
    <string name="registered_on">Regertered on</string>
    <string name="asterik">*</string>
    <string name="date">Date</string>
    <string name="age">Age</string>
    <string name="dob">Date of birth</string>
    <string name="yr">yr</string>
    <string name="dot">Day of treatment</string>
    <string name="sex">Sex</string>
    <string name="primary_contact">Primary Contact</string>
    <string name="secondary_contact">Secondary Contact</string>
    <string name="contact_no">Contact No</string>
    <string name="pos">Positive</string>
    <string name="neg">Negative</string>
    <string name="unknown">Unknown</string>
    <string name="cancel">Cancel</string>
    <string name="enter_username">Please enter username</string>
    <string name="enter_password">Please enter password</string>
    <string name="provide_credentials">Please enter credentials</string>
    <string name="exit_app">Do you want to leave the app?</string>
    <string name="leave_form">Leave Form</string>
    <string name="corrupt_record">"Corrupt record, can not proceed"</string>
    <string name="leave">Leave</string>
    <string name="try_later">Operation not successful, try later</string>
    <string name="form_not_saved">Form not saved, leave anyway?</string>
    <string name="server_address">Server Address</string>
    <string name="server_port">Port Number</string>
    <string name="date_of_collection">Date of collection</string>
    <string name="test_type">Test type</string>
    <string name="reason_for_testing">Reason for testing</string>
    <string name="no_of_months">No. of months</string>
    <string name="disease_classification">Disease classification</string>
    <string name="ep_site">EP site</string>
    <string name="nature_of_specimen">Nature of specimen</string>
    <string name="specimen_no">Specimen number</string>
    <string name="specimen_identification_no">Specimen identification number</string>
    <string name="opd_registration_number">OPD registration number</string>
    <string name="name_of_person">Referrer Name</string>
    <string name="designation_of_person">Referrer Designation</string>
    <string name="organization_name">Referrer Organization</string>
    <string name="organization_type">Organization type</string>
    <string name="sputum_collected_by">Sputum collected by</string>
    <string name="name">Name</string>
    <string name="microscopy">Microscopy</string>
    <string name="cxr">CXR</string>
    <string name="xpert_mtb">Xpert MTB/ RIF</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="follow_up">Follow-up</string>
    <string name="pulmonary">Pulmonary</string>
    <string name="extra_oulmonary">Extra-pulmonary (EP)</string>
    <string name="sputum">Sputum</string>
    <string name="urine">Urine</string>
    <string name="pus">Pus</string>
    <string name="sputum_in_preservative">Sputum in preservative</string>
    <string name="other">Other</string>
    <string name="other_specimen">Specify other specimen</string>
    <string name="type">Preservative Type</string>
    <string name="signin">Signin</string>
    <string name="patient_registration_number">Patient Registration Number</string>
    <string name="_patient_id">Patient ID</string>
    <string name="register_patient">Register Patient</string>
    <string name="search_patients">Search Patients</string>
    <string name="search_lab_tests">Search Lab Tests</string>
    <string name="view_error_records">View Error Records</string>
    <string name="show_error">Show Error</string>
    <string name="error">Error</string>
    <string name="show_data">Show Data</string>
    <string name="patients_list">Patients List</string>
    <string name="add_test_info">Add Test Info</string>
    <string name="add_test_order">Add Test Order</string>
    <string name="add_test_result">Add Test Result</string>
    <string name="view_microscopy_test_result">View Microscopy Test Profile</string>
    <string name="view_microscopy_eqa_test_result">View Microscopy (EQA) Test Profile</string>
    <string name="view_cxr_test_result">View CXR Test Profile</string>
    <string name="view_xpert_mtb_rif_test_result">View Xpert MTB/ RIF Test Profile</string>
    <string-array name="gender">
        <item></item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="test_registration_no">Test Registration Number</string>
    <string name="specimen_appearance">Specimen appearance</string>
    <string name="test_result">Test Result</string>
    <string name="microscopy_test_type">Microscopy Test Type</string>
    <string name="scanity_no">Scanty number</string>
    <string name="result">Result</string>
    <string name="cxr_result">CXR Result</string>
    <string name="select_lab">Select Lab</string>
    <string name="mtb_test_result">Xpert MTB/ RIF Test Result</string>
    <string name="examined_by">Examined By</string>
    <string name="eqa_controller">EQA Controller</string>
    <string name="name_of_medical_tech">Name of Medical Tech(Lab)</string>
    <string name="name_of_Laboratory">Name of Laboratory</string>
    <string name="address_of_laboratory">Address of Laboratory</string>
    <string name="lab_id">Lab ID</string>
    <string name="address_id_of_laboratory">Address ID of Laboratory</string>
    <string name="organization">Organization</string>
    <string name="remarks">Remarks</string>
    <string name="submit">Submit</string>
    <string name="went_wrong">Something went wrong on server</string>
    <string name="can_not_edit_atm">This record can not be edited right now</string>
    <string name="not_connected">Device is not connected to internet</string>
    <string name="could_not_parse_response">Could not parse server response</string>
    <string name="not_mapped_to_lab">You are not mapped to any Lab</string>
    <string name="login_successful">Login successful</string>
    <string name="login_un_successful">Login un-successful</string>
    <string name="unable_to_connect">Unable to connect to server</string>
    <string name="invalid_request">Invalid request</string>
    <string name="record_saved">Record Saved</string>
    <string name="record_updated">Record Updated</string>
    <string name="form_saved">Form Saved</string>
    <string name="method_call_edittext">This method call is only supported for EditText</string>
    <string name="method_call_spinner">This method call is only supported for Spinner</string>
    <string name="no_record_found">No record found</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_multiple_test_orders_display">Select one test order</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="dismiss">Dismiss</string>
    <string name="illegal_state">Device is in unexpected state, a reset is needed</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="summary_of_drug_administration">Summary of drug administration</string>
    <string name="missed_prescribed_days">Missed prescribed days</string>
    <string name="incomplete_prescribed_days">Incomplete prescribed days</string>
    <string name="fully_observed_days">Fully observed days</string>
</resources>