<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:cardCornerRadius="@dimen/large_card_radius"
        app:elevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDrugName"

                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary_of_drug_administration" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    style="@style/question_answer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:text="@string/missed_prescribed_days" />

                <TextView
                    android:id="@+id/etAnswer_totalMissedPrescribed"
                    style="@style/question_answer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    style="@style/question_answer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:text="@string/incomplete_prescribed_days" />

                <TextView
                    android:id="@+id/etAnswer_totalIncomplete"
                    style="@style/question_answer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    style="@style/question_answer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:text="@string/fully_observed_days" />

                <TextView
                    android:id="@+id/etAnswer_totalFullyObserved"
                    style="@style/question_answer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>