<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/appToolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/drop_shadow"
    android:clickable="true"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/activity_horizontal_margin"
    android:weightSum="10"
    app:titleTextColor="@color/White">

    <ImageView
        android:id="@+id/ivGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:srcCompat="@drawable/ic_corrupt_data" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="9"
        android:clickable="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPatientName"
            style="@style/question_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/address_of_facility"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvFormType"
            style="@style/question_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/address_of_facility"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvError"
                style="@style/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/show_error"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSeparator"
                style="@style/question_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:clickable="false"
                android:text="|"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tvData"
                style="@style/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/show_data"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/drop_shadow_red_foreground"
        android:gravity="center"
        android:textColor="@color/White"
        android:text="0"
        android:textSize="20dp" />
</LinearLayout>